@@ -1,5 +1,10 @@
 2007-11-29  Satoshi Nakagawa <artension@gmail.com>
 
+	Changed error messages on a paste dialog.
+	Changed to not show number of count down on a paste dialog.
+
+2007-11-29  Satoshi Nakagawa <artension@gmail.com>
+
 	Changed a paste dialog to remain showed while requesting to Pastie.
 
 2007-11-29  Satoshi Nakagawa <artension@gmail.com>
